methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:8: error: type mismatch;
 found   : Unit
 required: Boolean
        backward();
                ^SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
      if(getGroundColor!=Color.green){
      ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
      if(!isFacingWall()){
      ^